# optics-zurihac-2021

./: README.md
exercises/: Exercises.hs  LabelsExercises.hs  MiniLens.hs  MiniOptics.hs  optics-exercises.cabal  stack.yaml
