name:                optics-exercises
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base
                     , mtl
                     , optics-core == 0.4
                     , optics-th == 0.4
  default-language:    Haskell2010
  exposed-modules:     Exercises, LabelsExercises, MiniLens, MiniOptics
